plugins {
    id 'java'
    id 'maven-publish'
    id 'signing'  // 组件签名插件
    id "org.sonarqube" version "3.3"
}

sonarqube {
    properties {
        property "sonar.projectKey", "springroe_springroe-data"
        property "sonar.organization", "springroe"
        property "sonar.host.url", "https://sonarcloud.io"
    }
}

apply from: "$rootDir/gradle/dependencies.gradle"

allprojects {
    repositories {
        mavenCentral()
        maven { url 'https://jitpack.io' }
        maven { url 'https://repo.spring.io/milestone' }
    }
}


subprojects {

    apply plugin: 'java-library'

    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17

    group 'io.github.springroe'
    version = springroeVersion

    dependencies {

        implementation "org.springframework.data:spring-data-commons:$springDataCommonVersion"

        implementation "io.swagger.core.v3:swagger-annotations:$swaggerVersion"
        implementation "io.swagger:swagger-annotations:1.6.5"

        // https://mvnrepository.com/artifact/com.querydsl/querydsl-core
        implementation "com.querydsl:querydsl-core:$querydslVersion"

        // https://mvnrepository.com/artifact/org.projectlombok/lombok
        compileOnly "org.projectlombok:lombok:$lombokVersion"
        annotationProcessor "org.projectlombok:lombok:$lombokVersion"

        testCompileOnly "org.projectlombok:lombok:$lombokVersion"
        testAnnotationProcessor "org.projectlombok:lombok:$lombokVersion"

        testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
        testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
    }

    test {
        useJUnitPlatform()
    }

    javadoc {
        options.encoding = 'UTF-8'
    }

    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
        options.deprecation = true
        options.compilerArgs += ["-Xlint:unchecked", "-Xlint:deprecation", "-parameters"]
    }

    apply from: "$rootDir/gradle/publishing.gradle"

}

